[gd_scene load_steps=15 format=4 uid="uid://b4tvbchdqatwo"]

[ext_resource type="Script" uid="uid://cwylr2w67w0o" path="res://level design/boss_scenes/boss_1.gd" id="1_c1k21"]
[ext_resource type="TileSet" uid="uid://dld60hu50porp" path="res://level design/base_tileset.tres" id="2_6b3ot"]
[ext_resource type="Texture2D" uid="uid://bapoau3vul607" path="res://level design/deco/background/IMG_0787.PNG" id="2_r0o1x"]
[ext_resource type="Script" uid="uid://bj5iukj0scggh" path="res://addons/shaker/src/Vector2/shaker_component2D.gd" id="2_rf4qh"]
[ext_resource type="Script" uid="uid://bprhp6r4msk2v" path="res://addons/shaker/data/Vector2/BaseShakerType2D.gd" id="3_776vs"]
[ext_resource type="Texture2D" uid="uid://cho8enonqiwlr" path="res://level design/deco/background/Background.png" id="3_rqj48"]
[ext_resource type="PackedScene" uid="uid://b41fu1evkx8je" path="res://enemies/Boss/Boss.tscn" id="4_c1k21"]
[ext_resource type="Script" uid="uid://wbt3t7a5nbfl" path="res://addons/shaker/data/Vector2/ShakerTypeRandom2D.gd" id="4_r0o1x"]
[ext_resource type="PackedScene" uid="uid://duigv8nwli4ia" path="res://player/Jumper/Jumper.tscn" id="5_7i60n"]
[ext_resource type="Script" uid="uid://nsw1k7n2hdc3" path="res://addons/shaker/data/Single/BaseShakerType1D.gd" id="5_rqj48"]
[ext_resource type="Script" uid="uid://hbg4g7c2upf6" path="res://addons/shaker/data/Vector2/ShakerPreset2D.gd" id="6_tj8ii"]
[ext_resource type="PackedScene" uid="uid://d2g0se7bd50qx" path="res://enemies/Boss/BossProjectile.tscn" id="10_776vs"]

[sub_resource type="Resource" id="Resource_aytor"]
script = ExtResource("4_r0o1x")
seed = 0
amplitude = Vector2(1, 1)
offset = Vector2(0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64
metadata/_custom_type_script = "uid://wbt3t7a5nbfl"

[sub_resource type="Resource" id="Resource_pq38i"]
script = ExtResource("6_tj8ii")
PositionShake = Array[ExtResource("3_776vs")]([SubResource("Resource_aytor")])
RotationShake = Array[ExtResource("5_rqj48")]([])
ScaleShake = Array[ExtResource("3_776vs")]([])
bake_internal = 64
__follow_timeline = false
metadata/_custom_type_script = "uid://hbg4g7c2upf6"

[node name="BossRoom" type="Node2D"]
script = ExtResource("1_c1k21")
metadata/_edit_lock_ = true

[node name="Img0787" type="Sprite2D" parent="."]
position = Vector2(984, 520)
texture = ExtResource("2_r0o1x")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("3_rqj48")
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960.142, 540.491)

[node name="shake_rumble" type="Node2D" parent="Camera2D"]
script = ExtResource("2_rf4qh")
intensity = 5.0
duration = 3.0
shakerPreset = SubResource("Resource_pq38i")
metadata/_custom_type_script = "uid://bj5iukj0scggh"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.188235)
tile_map_data = PackedByteArray("AAAcAAAAAAAIAAEAAAAdAAAAAAAJAAIAAAABAAAAAAALAAIAAAAAAAAAAAAJAAIAAAAdAP//AAAKAAAAAAABAP//AAALAAAAAAAAAP//AAAKAAAAAAD//wAAAAAIAAEAAAD//wEAAAAIAAEAAAAAAA8AAAAJAAIAAAAAAAIAAAAJAAIAAAAAAAEAAAAJAAIAAAABABAAAAAJAAIAAAACABAAAAAJAAIAAAADABAAAAAJAAIAAAAEABAAAAAJAAIAAAAFABAAAAAJAAIAAAAGABAAAAAJAAIAAAAHABAAAAAJAAIAAAAIABAAAAAJAAIAAAAJABAAAAAJAAIAAAAMABAAAAAJAAIAAAALABAAAAAJAAIAAAAKABAAAAAJAAIAAAANABAAAAAJAAIAAAAOABAAAAAJAAIAAAAPABAAAAAJAAIAAAAQABAAAAAJAAIAAAARABAAAAAJAAIAAAASABAAAAAJAAIAAAATABAAAAAJAAIAAAAUABAAAAAJAAIAAAAVABAAAAAJAAIAAAAWABAAAAAJAAIAAAAXABAAAAAJAAIAAAAYABAAAAAJAAIAAAAZABAAAAAJAAIAAAAaABAAAAAJAAIAAAAbABAAAAAJAAIAAAAcABAAAAAJAAIAAAAdABAAAAAJAAIAAAAeABAAAAALAAIAAAAdABEAAAAJAAMAAAAcABEAAAAJAAMAAAAbABEAAAAJAAMAAAAaABEAAAAJAAMAAAAZABEAAAAJAAMAAAAYABEAAAAJAAMAAAAXABEAAAAJAAMAAAAWABEAAAAJAAMAAAAVABEAAAAJAAMAAAAUABEAAAAJAAMAAAATABEAAAAJAAMAAAASABEAAAAJAAMAAAARABEAAAAJAAMAAAAQABEAAAAJAAMAAAAPABEAAAAJAAMAAAAOABEAAAAJAAMAAAANABEAAAAJAAMAAAAMABEAAAAJAAMAAAALABEAAAAJAAMAAAAKABEAAAAJAAMAAAAJABEAAAAJAAMAAAAIABEAAAAJAAMAAAADABEAAAAJAAMAAAACABEAAAAJAAMAAAABABEAAAAJAAMAAAAEABEAAAAJAAMAAAAFABEAAAAJAAMAAAAGABEAAAAJAAMAAAAHABEAAAAJAAMAAAABAA8AAAAJAAIAAAAGAA8AAAAJAAIAAAAFAA8AAAAJAAIAAAAEAA8AAAAJAAIAAAADAA8AAAAJAAIAAAACAA8AAAAJAAIAAAABAAIAAAALAAIAAAABAAEAAAALAAIAAAAeAAAAAAALAAIAAAAdAAQAAAAJAAIAAAAeAAQAAAALAAIAAAAeAAMAAAALAAIAAAAeAAIAAAALAAIAAAAeAAEAAAALAAIAAAAdAAEAAAAJAAIAAAAdAAIAAAAJAAIAAAAdAAMAAAAJAAIAAAAcAAEAAAAIAAEAAAAdAAUAAAAJAAIAAAAdAAYAAAAJAAIAAAAdAAcAAAAJAAIAAAAdAAgAAAAJAAIAAAAdAAkAAAAJAAIAAAAdAAoAAAAJAAIAAAAcAA8AAAAJAAIAAAAcAA4AAAAFAAEAAAAdAA8AAAAJAAIAAAAeAA8AAAALAAIAAAAeAA4AAAALAAIAAAAeAA0AAAALAAIAAAAdAA4AAAAJAAIAAAAdAA0AAAAJAAIAAAAeAAwAAAALAAIAAAAeAAsAAAALAAIAAAAdAAsAAAAJAAIAAAAdAAwAAAAJAAIAAAAeAAoAAAALAAIAAAAeAAkAAAALAAIAAAAeAAgAAAALAAIAAAAeAAcAAAALAAIAAAAeAAYAAAALAAIAAAAeAAUAAAALAAIAAAALAA8AAAAJAAIAAAAMAA8AAAAJAAIAAAAMAA4AAAAKAAAAAAANAA8AAAAJAAIAAAAAABEAAAAJAAMAAAAAABAAAAAJAAIAAAAKAA8AAAAJAAIAAAAJAA8AAAAJAAIAAAAIAA8AAAAJAAIAAAAHAA8AAAAJAAIAAAD//wIAAAAIAAEAAAAOAA8AAAAJAAIAAAAPAA8AAAAJAAIAAAAQAA8AAAAJAAIAAAARAA8AAAAJAAIAAAASAA8AAAAJAAIAAAATAA8AAAAJAAIAAAAUAA8AAAAJAAIAAAAVAA8AAAAJAAIAAAAWAA8AAAAJAAIAAAAXAA8AAAAJAAIAAAAYAA8AAAAJAAIAAAAZAA8AAAAJAAIAAAAaAA8AAAAJAAIAAAAbAA8AAAAJAAIAAAABAAQAAAALAAIAAAAAAAQAAAAJAAIAAAAAAAUAAAAJAAIAAAABAAYAAAALAAIAAAABAAcAAAALAAIAAAABAAgAAAALAAIAAAABAAUAAAALAAIAAAABAAMAAAALAAIAAAAAAAMAAAAJAAIAAAD//wMAAAAIAAEAAAD//wQAAAAIAAEAAAABAAkAAAALAAIAAAAAAAYAAAAJAAIAAAANAA4AAAAKAAAAAAAOAA4AAAAKAAAAAAAPAA4AAAAKAAAAAAAQAA4AAAAKAAAAAAARAA4AAAAKAAAAAAASAA4AAAAKAAAAAAATAA4AAAAKAAAAAAAbAA4AAAAKAAAAAAAaAA4AAAAKAAAAAAAZAA4AAAAKAAAAAAAYAA4AAAAKAAAAAAAXAA4AAAAKAAAAAAAWAA4AAAAKAAAAAAAVAA4AAAAKAAAAAAAUAA4AAAAKAAAAAAAAAAcAAAAJAAIAAAAAAAgAAAAJAAIAAAAAAAkAAAAJAAIAAAAAAAoAAAAJAAIAAAAAAAsAAAAJAAIAAAAAAAwAAAAJAAIAAAAAAA0AAAAJAAIAAAAAAA4AAAAJAAIAAAABAA4AAAAGAAEAAAABAA0AAAALAAIAAAABAAwAAAALAAIAAAABAAsAAAALAAIAAAABAAoAAAALAAIAAAACAA4AAAAKAAAAAAAcAAIAAAAIAAEAAAAcAAMAAAAIAAEAAAALAA4AAAAKAAAAAAAKAA4AAAAKAAAAAAAJAA4AAAAKAAAAAAAIAA4AAAAKAAAAAAAHAA4AAAAKAAAAAAAGAA4AAAAKAAAAAAAFAA4AAAAKAAAAAAAEAA4AAAAKAAAAAAADAA4AAAAKAAAAAAD//wUAAAAIAAEAAAD//wYAAAAIAAEAAAD//wcAAAAIAAEAAAD//wgAAAAIAAEAAAD//wkAAAAIAAEAAAD//woAAAAIAAEAAAD//wsAAAAIAAEAAAD//wwAAAAIAAEAAAD//w0AAAAIAAEAAAD//w4AAAAIAAEAAAD//w8AAAAIAAEAAAD//xAAAAAIAAEAAAAcAAQAAAAIAAEAAAAcAAUAAAAIAAEAAAAcAAYAAAAIAAEAAAAcAAcAAAAIAAEAAAAcAAgAAAAIAAEAAAAcAAkAAAAIAAEAAAAcAAoAAAAIAAEAAAAcAAsAAAAIAAEAAAAcAAwAAAAIAAEAAAAcAA0AAAAIAAEAAAD/////AAAIAAAAAAD//xEAAAAIAAMAAAAeAP//AAALAAAAAAAeABEAAAALAAMAAAAcAP//AAAIAAAAAAA=")
tile_set = ExtResource("2_6b3ot")

[node name="Jumper" parent="." instance=ExtResource("5_7i60n")]
position = Vector2(352, 424)
MID_AIR_JUMPS = 1

[node name="Boss" parent="." instance=ExtResource("4_c1k21")]
z_index = 52
position = Vector2(384, 320)

[node name="ForegroundTilemap" type="TileMapLayer" parent="."]
z_index = 50
tile_map_data = PackedByteArray("AAABAAQAAAALAAIAAAABAAUAAAALAAIAAAABAAYAAAALAAIAAAABAAcAAAALAAIAAAABAAgAAAALAAIAAAABAAkAAAALAAIAAAABAAoAAAALAAIAAAABAAsAAAALAAIAAAABAAwAAAALAAIAAAABAA0AAAALAAIAAAAAAAEAAAAJAAIAAAAAAAIAAAAJAAIAAAAAAAMAAAAJAAIAAAAAAAQAAAAJAAIAAAAAAAUAAAAJAAIAAAAAAAYAAAAJAAIAAAAAAAcAAAAJAAIAAAAAAAgAAAAJAAIAAAAAAAkAAAAJAAIAAAAAAAoAAAAJAAIAAAAAAAsAAAAJAAIAAAAAAAwAAAAJAAIAAAAAAA0AAAAJAAIAAAAAAA4AAAAJAAIAAAAAAA8AAAAJAAIAAAAAABAAAAAJAAIAAAAAABEAAAAJAAIAAAD//xEAAAAJAAIAAAD//xAAAAAJAAIAAAD//w8AAAAJAAIAAAD//w4AAAAJAAIAAAD//w0AAAAJAAIAAAD//wwAAAAJAAIAAAD//wsAAAAJAAIAAAD//woAAAAJAAIAAAD//wkAAAAJAAIAAAD//wgAAAAJAAIAAAD//wcAAAAJAAIAAAD//wYAAAAJAAIAAAD//wUAAAAJAAIAAAD//wQAAAAJAAIAAAD//wMAAAAJAAIAAAD//wIAAAAJAAIAAAD//wEAAAAJAAIAAAD//wAAAAAJAAIAAAD/////AAAJAAIAAAAAAAAAAAAJAAIAAAAAAP//AAAJAAIAAAABAP//AAAJAAIAAAACAP//AAAJAAIAAAADAP//AAAJAAIAAAAEAP//AAAJAAIAAAAFAP//AAAJAAIAAAAGAP//AAAJAAIAAAAHAP//AAAJAAIAAAAIAP//AAAJAAIAAAAJAP//AAAJAAIAAAAKAP//AAAJAAIAAAALAP//AAAJAAIAAAAMAP//AAAJAAIAAAANAP//AAAJAAIAAAAOAP//AAAJAAIAAAAPAP//AAAJAAIAAAAQAP//AAAJAAIAAAARAP//AAAJAAIAAAASAP//AAAJAAIAAAATAP//AAAJAAIAAAAUAP//AAAJAAIAAAAVAP//AAAJAAIAAAAWAP//AAAJAAIAAAAXAP//AAAJAAIAAAAYAP//AAAJAAIAAAAZAP//AAAJAAIAAAAaAP//AAAJAAIAAAAbAP//AAAJAAIAAAAcAP//AAAJAAIAAAAdAP//AAAJAAIAAAAeAP//AAAJAAIAAAAbAAAAAAAJAAIAAAAaAAAAAAAJAAIAAAAZAAAAAAAJAAIAAAAcAAAAAAAJAAIAAAAdAAAAAAAJAAIAAAAeAAAAAAAJAAIAAAAeAAEAAAAJAAIAAAAdAAEAAAAJAAIAAAAcAAEAAAAJAAIAAAAbAAEAAAAJAAIAAAAcAAIAAAAJAAIAAAAdAAIAAAAJAAIAAAAeAAIAAAAJAAIAAAAdAAMAAAAJAAIAAAAYAAAAAAAJAAIAAAAXAAAAAAAJAAIAAAAWAAAAAAAJAAIAAAAVAAAAAAAJAAIAAAAUAAAAAAAJAAIAAAATAAAAAAAJAAIAAAASAAAAAAAJAAIAAAARAAAAAAAJAAIAAAAQAAAAAAAJAAIAAAAPAAAAAAAJAAIAAAAOAAAAAAAJAAIAAAANAAAAAAAJAAIAAAAMAAAAAAAJAAIAAAALAAAAAAAJAAIAAAAKAAAAAAAJAAIAAAAJAAAAAAAJAAIAAAAIAAAAAAAJAAIAAAAHAAAAAAAJAAIAAAAGAAAAAAAJAAIAAAAFAAAAAAAJAAIAAAAEAAAAAAAJAAIAAAADAAAAAAAJAAIAAAACAAAAAAAJAAIAAAABAAAAAAAJAAIAAAABAAEAAAAJAAIAAAACAAEAAAAJAAIAAAABAAIAAAAJAAIAAAAeAAMAAAAJAAIAAAAeAAQAAAAJAAIAAAAeAAUAAAAJAAIAAAAeAAYAAAAJAAIAAAAeAAcAAAAJAAIAAAAeAAgAAAAJAAIAAAAeAAkAAAAJAAIAAAAeAAoAAAAJAAIAAAAeAAsAAAAJAAIAAAAeAAwAAAAJAAIAAAAeAA0AAAAJAAIAAAAeAA4AAAAJAAIAAAAeAA8AAAAJAAIAAAAeABAAAAAJAAIAAAAdAA8AAAAJAAIAAAAdABAAAAAJAAIAAAAdAA4AAAAJAAIAAAAdAA0AAAAJAAIAAAAdAAwAAAAJAAIAAAAdAAsAAAAJAAIAAAAdAAoAAAAJAAIAAAAdAAkAAAAJAAIAAAAdAAgAAAAJAAIAAAAdAAcAAAAJAAIAAAAdAAYAAAAJAAIAAAAdAAUAAAAJAAIAAAAdAAQAAAAJAAIAAAAeABEAAAAJAAIAAAAdABEAAAAJAAIAAAAcABEAAAAJAAIAAAAbABEAAAAJAAIAAAAaABEAAAAJAAIAAAAZABEAAAAJAAIAAAAYABEAAAAJAAIAAAAXABEAAAAJAAIAAAAWABEAAAAJAAIAAAAVABEAAAAJAAIAAAAUABEAAAAJAAIAAAATABEAAAAJAAIAAAASABEAAAAJAAIAAAARABEAAAAJAAIAAAAQABEAAAAJAAIAAAAPABEAAAAJAAIAAAAOABEAAAAJAAIAAAANABEAAAAJAAIAAAAMABEAAAAJAAIAAAALABEAAAAJAAIAAAAKABEAAAAJAAIAAAAJABEAAAAJAAIAAAAIABEAAAAJAAIAAAAHABEAAAAJAAIAAAAGABEAAAAJAAIAAAAFABEAAAAJAAIAAAAEABEAAAAJAAIAAAADABEAAAAJAAIAAAACABEAAAAJAAIAAAABABEAAAAJAAIAAAABAA8AAAAJAAIAAAACAA8AAAAJAAIAAAADAA8AAAAJAAIAAAABABAAAAAJAAIAAAACABAAAAAJAAIAAAAEAA8AAAAJAAIAAAADABAAAAAJAAIAAAAEABAAAAAJAAIAAAAFAA8AAAAJAAIAAAAGAA8AAAAJAAIAAAAFABAAAAAJAAIAAAAHAA8AAAAJAAIAAAAIAA8AAAAJAAIAAAAJAA8AAAAJAAIAAAAKAA8AAAAJAAIAAAALAA8AAAAJAAIAAAAMAA8AAAAJAAIAAAANABAAAAAJAAIAAAAMABAAAAAJAAIAAAALABAAAAAJAAIAAAAKABAAAAAJAAIAAAAJABAAAAAJAAIAAAAIABAAAAAJAAIAAAAHABAAAAAJAAIAAAAGABAAAAAJAAIAAAANAA8AAAAJAAIAAAAOAA8AAAAJAAIAAAAPAA8AAAAJAAIAAAAQAA8AAAAJAAIAAAARABAAAAAJAAIAAAASABAAAAAJAAIAAAATABAAAAAJAAIAAAAUABAAAAAJAAIAAAAQABAAAAAJAAIAAAAPABAAAAAJAAIAAAAOABAAAAAJAAIAAAARAA8AAAAJAAIAAAASAA8AAAAJAAIAAAATAA8AAAAJAAIAAAAUAA8AAAAJAAIAAAAVAA8AAAAJAAIAAAAWAA8AAAAJAAIAAAAXAA8AAAAJAAIAAAAYAA8AAAAJAAIAAAAXABAAAAAJAAIAAAAWABAAAAAJAAIAAAAVABAAAAAJAAIAAAAYABAAAAAJAAIAAAAZABAAAAAJAAIAAAAaABAAAAAJAAIAAAAbABAAAAAJAAIAAAAcABAAAAAJAAIAAAAZAA8AAAAJAAIAAAAaAA8AAAAJAAIAAAAbAA8AAAAJAAIAAAAcAA8AAAAJAAIAAAAcAAQAAAAIAAEAAAAcAAUAAAAIAAEAAAAcAAYAAAAIAAEAAAAcAAcAAAAIAAEAAAAcAAgAAAAIAAEAAAAcAAkAAAAIAAEAAAAcAAoAAAAIAAEAAAAcAAsAAAAIAAEAAAAcAAwAAAAIAAEAAAAcAA0AAAAIAAEAAAAcAA4AAAAFAAEAAAABAA4AAAAGAAEAAAABAAMAAAAGAAIAAAAcAAMAAAAFAAIAAAAbAA4AAAAKAAAAAAAaAA4AAAAKAAAAAAAZAA4AAAAKAAAAAAAYAA4AAAAKAAAAAAAXAA4AAAAKAAAAAAAWAA4AAAAKAAAAAAAVAA4AAAAKAAAAAAAUAA4AAAAKAAAAAAATAA4AAAAKAAAAAAASAA4AAAAKAAAAAAARAA4AAAAKAAAAAAAQAA4AAAAKAAAAAAAPAA4AAAAKAAAAAAAOAA4AAAAKAAAAAAANAA4AAAAKAAAAAAAMAA4AAAAKAAAAAAALAA4AAAAKAAAAAAAKAA4AAAAKAAAAAAAJAA4AAAAKAAAAAAAIAA4AAAAKAAAAAAAHAA4AAAAKAAAAAAAGAA4AAAAKAAAAAAAFAA4AAAAKAAAAAAAEAA4AAAAKAAAAAAADAA4AAAAKAAAAAAACAA4AAAAKAAAAAAACAAMAAAALAAMAAAAbAAMAAAAIAAMAAAACAAIAAAAGAAIAAAAbAAIAAAAFAAIAAAADAAIAAAALAAMAAAADAAEAAAAGAAIAAAAEAAEAAAAJAAMAAAAFAAEAAAAJAAMAAAAGAAEAAAAJAAMAAAAHAAEAAAAJAAMAAAAIAAEAAAAJAAMAAAAJAAEAAAAJAAMAAAAKAAEAAAAJAAMAAAALAAEAAAAFAAIAAAALAAIAAAAIAAMAAAAMAAIAAAAFAAIAAAAMAAEAAAAJAAIAAAAMAAMAAAAIAAMAAAANAAMAAAALAAMAAAANAAIAAAAGAAIAAAANAAEAAAAJAAIAAAAOAAIAAAAJAAMAAAAPAAIAAAALAAMAAAAPAAEAAAAGAAIAAAAOAAEAAAAJAAIAAAARAAEAAAAJAAMAAAAQAAEAAAAJAAMAAAASAAEAAAAJAAMAAAATAAEAAAAJAAMAAAAUAAEAAAAJAAMAAAAVAAEAAAAJAAMAAAAWAAEAAAAJAAMAAAAXAAEAAAAJAAMAAAAYAAEAAAAJAAMAAAAZAAEAAAAJAAMAAAAaAAEAAAAFAAIAAAAaAAIAAAAIAAMAAAA=")
tile_set = ExtResource("2_6b3ot")
collision_enabled = false

[node name="projectiles_a" type="Node2D" parent="."]
position = Vector2(0, -944)

[node name="BossProjectile" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(184, -216)
rotation = -1.5708

[node name="BossProjectile2" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(312, -160)
rotation = -1.5708

[node name="BossProjectile3" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(560, -160)
rotation = -1.5708

[node name="BossProjectile4" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(696, -216)
rotation = -1.5708

[node name="BossProjectile5" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(1000, -104)
rotation = -1.5708

[node name="BossProjectile6" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(1336, -216)
rotation = -1.5708

[node name="BossProjectile7" parent="projectiles_a" instance=ExtResource("10_776vs")]
position = Vector2(1688, -160)
rotation = -1.5708

[node name="projectiles_b" type="Node2D" parent="."]
position = Vector2(0, -728)

[node name="BossProjectile" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(184, -216)
rotation = -1.5708

[node name="BossProjectile2" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(424, -168)
rotation = -1.5708

[node name="BossProjectile3" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(560, -160)
rotation = -1.5708

[node name="BossProjectile4" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(864, -208)
rotation = -1.5708

[node name="BossProjectile5" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(1000, -104)
rotation = -1.5708

[node name="BossProjectile6" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(1120, -216)
rotation = -1.5708

[node name="BossProjectile7" parent="projectiles_b" instance=ExtResource("10_776vs")]
position = Vector2(1504, -160)
rotation = -1.5708

[node name="Foreground" type="Node2D" parent="."]

[connection signal="was_hit" from="Boss" to="." method="_on_boss_was_hit"]
